<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/white_shape"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_50dp"
            android:src="@drawable/splash_icon_blue"/>

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18sp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/choose_photo"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:paddingBottom="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_tv_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/select_from_gallery"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="@dimen/_40dp"
            android:layout_marginLeft="@dimen/_40dp"
            android:background="@color/bgSplash"/>

        <TextView
            android:id="@+id/dialog_tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/select_from_camera"
            android:textColor="@color/black"/>

    </LinearLayout>


</LinearLayout>