<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/btnSwitch"
            android:layout_marginTop="@dimen/_40dp"
            android:layout_marginStart="@dimen/_15dp"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_15dp"
            android:layout_gravity="end"
            android:background="@drawable/switch_bg"
            android:orientation="horizontal"
            android:layout_width="70dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btnEN"
                android:textColor="@color/white"
                android:background="@drawable/switch_selected"
                android:gravity="center"
                android:text="@string/en"
                android:textStyle="bold"
                android:layout_width="@dimen/_35dp"
                android:textSize="@dimen/_12sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/btnSPA"
                android:textSize="@dimen/_12sp"
                android:textStyle="bold"
                android:textColor="@color/unselected_color"
                android:gravity="center"
                android:text="@string/spa"
                android:layout_width="@dimen/_35dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <ImageView
            android:layout_alignParentEnd="true"
            android:src="@drawable/top_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

       <LinearLayout
           android:gravity="center"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <ImageView
               android:id="@+id/mIcon"
               android:layout_gravity="center"
               android:src="@drawable/splash_icon_blue"
               android:layout_width="@dimen/_200dp"
               android:layout_height="@dimen/_100dp"/>

           <TextView
               android:id="@+id/btnCreateNewAccount"
               android:textSize="@dimen/_16sp"
               android:textColor="@color/white"
               android:gravity="center|center_vertical"
               android:fontFamily="@font/quicksand_medium"
               android:text="@string/create_new_account"
               android:layout_marginTop="@dimen/_15dp"
               android:layout_gravity="center"
               android:background="@drawable/save_change_button"
               android:layout_width="@dimen/_250dp"
               android:layout_height="@dimen/_45dp"/>

           <TextView
               android:id="@+id/btnSignIn"
               android:textSize="@dimen/_20sp"
               android:textStyle="bold"
               android:textColor="@color/bgSplash"
               android:gravity="center|center_vertical"
               android:fontFamily="@font/quicksand_bold"
               android:text="@string/sign_in"
               android:layout_marginTop="@dimen/_15dp"
               android:layout_gravity="center"
               android:layout_width="@dimen/_250dp"
               android:layout_height="@dimen/_45dp"/>

       </LinearLayout>

        <ImageView
            android:layout_alignParentBottom="true"
            android:src="@drawable/bottom_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/viewBottom"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:background="@color/bgSplash"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30dp"/>


    </RelativeLayout>

</layout>