<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <nl.dionsegijn.konfetti.KonfettiView
            android:id="@+id/viewKonfetti"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/successful_animation" />

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nexa_bold"
                android:paddingLeft="@dimen/_10dp"
                android:paddingRight="@dimen/_10dp"
                android:text="@string/payment_success"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp" />

            <TextView
                android:id="@+id/order_placed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:paddingLeft="@dimen/_10dp"
                android:paddingRight="@dimen/_10dp"
                android:text="@string/your_order_has_been_placed"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp" />

            <TextView
                android:id="@+id/btnOk"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_30dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/save_change_button"
                android:fontFamily="@font/nexa_bold"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</layout>